refactor: migrate configuration schema to v2